// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`node > default flags > generates typings by default 1`] = `
"export { readJson } from './readJson';
"
`;

exports[`node > default flags > generates typings by default 2`] = `
"/// <reference path=\\"../types/vendor.d.ts\\" />
export declare function readJson(filePath: string, use?: 'dev' | 'optional' | 'peer'): Promise<unknown>;
"
`;

exports[`node > default flags > minify bundle by default 1`] = `
"// src/readJson.ts
import { readFile } from \\"node:fs/promises\\";
import { parseJson } from \\"parse-json\\";
import { parseJsonDev } from \\"parse-json-dev\\";
import { parseJsonOptional } from \\"parse-json-optional\\";
import { parseJsonPeer } from \\"parse-json-peer\\";
async function readJson(filePath, use) {
  const content = await readFile(filePath, \\"utf8\\");
  switch (use) {
    case \\"dev\\":
      return parseJsonDev(content);
    case \\"optional\\":
      return parseJsonOptional(content);
    case \\"peer\\":
      return parseJsonPeer(content);
  }
  return parseJson(content);
}
export {
  readJson
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > dependencies > uses dependencies as external 1`] = `
"// src/readJson.ts
import { readFile } from \\"node:fs/promises\\";
import { parseJson } from \\"parse-json\\";
import { parseJsonDev } from \\"parse-json-dev\\";
import { parseJsonOptional } from \\"parse-json-optional\\";
import { parseJsonPeer } from \\"parse-json-peer\\";
async function readJson(filePath, use) {
  const content = await readFile(filePath, \\"utf8\\");
  switch (use) {
    case \\"dev\\":
      return parseJsonDev(content);
    case \\"optional\\":
      return parseJsonOptional(content);
    case \\"peer\\":
      return parseJsonPeer(content);
  }
  return parseJson(content);
}
export {
  readJson
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > dependencies > uses dependencies as external 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/readJson.ts\\"],
  \\"sourcesContent\\": [\\"/// <reference path=\\\\\\"../types/vendor.d.ts\\\\\\" />\\\\nimport { readFile } from 'node:fs/promises';\\\\n\\\\nimport { parseJson } from 'parse-json';\\\\nimport { parseJsonDev } from 'parse-json-dev';\\\\nimport { parseJsonOptional } from 'parse-json-optional';\\\\nimport { parseJsonPeer } from 'parse-json-peer';\\\\n\\\\nexport async function readJson(\\\\n  filePath: string,\\\\n  use?: 'dev' | 'optional' | 'peer',\\\\n): Promise<unknown> {\\\\n  const content = await readFile(filePath, 'utf8');\\\\n\\\\n  switch (use) {\\\\n    case 'dev':\\\\n      return parseJsonDev(content);\\\\n    case 'optional':\\\\n      return parseJsonOptional(content);\\\\n    case 'peer':\\\\n      return parseJsonPeer(content);\\\\n  }\\\\n\\\\n  return parseJson(content);\\\\n}\\\\n\\"],
  \\"mappings\\": \\";AACA,SAAS,gBAAgB;AAEzB,SAAS,iBAAiB;AAC1B,SAAS,oBAAoB;AAC7B,SAAS,yBAAyB;AAClC,SAAS,qBAAqB;AAE9B,eAAsB,SACpB,UACA,KACkB;AAClB,QAAM,UAAU,MAAM,SAAS,UAAU,MAAM;AAE/C,UAAQ,KAAK;AAAA,IACX,KAAK;AACH,aAAO,aAAa,OAAO;AAAA,IAC7B,KAAK;AACH,aAAO,kBAAkB,OAAO;AAAA,IAClC,KAAK;AACH,aAAO,cAAc,OAAO;AAAA,EAChC;AAEA,SAAO,UAAU,OAAO;AAC1B;\\",
  \\"names\\": []
}
"
`;

exports[`node > dependencies > uses dependencies as external 3`] = `
"export { readJson } from './readJson';
"
`;

exports[`node > dependencies > uses dependencies as external 4`] = `
"/// <reference path=\\"../types/vendor.d.ts\\" />
export declare function readJson(filePath: string, use?: 'dev' | 'optional' | 'peer'): Promise<unknown>;
"
`;

exports[`node > entries > input > resolves "./file" entry to "src/file.ts" and bundles to "lib/file.js" 1`] = `
"// src/file.ts
var entryPoint = \\"src/file\\";
export {
  entryPoint
};
//# sourceMappingURL=file.js.map
"
`;

exports[`node > entries > input > resolves "./file" entry to "src/file.ts" and bundles to "lib/file.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/file.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/file';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "./file.ts" entry to "src/file.ts" and bundles to "lib/file.js" 1`] = `
"// src/file.ts
var entryPoint = \\"src/file\\";
export {
  entryPoint
};
//# sourceMappingURL=file.js.map
"
`;

exports[`node > entries > input > resolves "./file.ts" entry to "src/file.ts" and bundles to "lib/file.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/file.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/file';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "./file-or-subdir" entry to "src/file-or-subdir.ts" and bundles to "lib/file-or-subdir.js" 1`] = `
"// src/file-or-subdir.ts
var entryPoint = \\"src/file-or-subdir\\";
export {
  entryPoint
};
//# sourceMappingURL=file-or-subdir.js.map
"
`;

exports[`node > entries > input > resolves "./file-or-subdir" entry to "src/file-or-subdir.ts" and bundles to "lib/file-or-subdir.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/file-or-subdir.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/file-or-subdir';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "./file-or-subdir.ts" entry to "src/file-or-subdir.ts" and bundles to "lib/file-or-subdir.js" 1`] = `
"// src/file-or-subdir.ts
var entryPoint = \\"src/file-or-subdir\\";
export {
  entryPoint
};
//# sourceMappingURL=file-or-subdir.js.map
"
`;

exports[`node > entries > input > resolves "./file-or-subdir.ts" entry to "src/file-or-subdir.ts" and bundles to "lib/file-or-subdir.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/file-or-subdir.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/file-or-subdir';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "./file-or-subdir/index" entry to "src/file-or-subdir/index.ts" and bundles to "lib/file-or-subdir/index.js" 1`] = `
"// src/file-or-subdir/index.ts
var entryPoint = \\"src/file-or-subdir/index\\";
export {
  entryPoint
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > entries > input > resolves "./file-or-subdir/index" entry to "src/file-or-subdir/index.ts" and bundles to "lib/file-or-subdir/index.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../../src/file-or-subdir/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/file-or-subdir/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "./file-or-subdir/index.ts" entry to "src/file-or-subdir/index.ts" and bundles to "lib/file-or-subdir/index.js" 1`] = `
"// src/file-or-subdir/index.ts
var entryPoint = \\"src/file-or-subdir/index\\";
export {
  entryPoint
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > entries > input > resolves "./file-or-subdir/index.ts" entry to "src/file-or-subdir/index.ts" and bundles to "lib/file-or-subdir/index.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../../src/file-or-subdir/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/file-or-subdir/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "./index" entry to "src/index.ts" and bundles to "lib/index.js" 1`] = `
"// src/index.ts
var entryPoint = \\"src/index\\";
export {
  entryPoint
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > entries > input > resolves "./index" entry to "src/index.ts" and bundles to "lib/index.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "./index.ts" entry to "src/index.ts" and bundles to "lib/index.js" 1`] = `
"// src/index.ts
var entryPoint = \\"src/index\\";
export {
  entryPoint
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > entries > input > resolves "./index.ts" entry to "src/index.ts" and bundles to "lib/index.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "./subdir" entry to "src/subdir/index.ts" and bundles to "lib/subdir.js" 1`] = `
"// src/subdir/index.ts
var entryPoint = \\"src/subdir/index\\";
export {
  entryPoint
};
//# sourceMappingURL=subdir.js.map
"
`;

exports[`node > entries > input > resolves "./subdir" entry to "src/subdir/index.ts" and bundles to "lib/subdir.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/subdir/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/subdir/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "./subdir/index.ts" entry to "src/subdir/index.ts" and bundles to "lib/subdir/index.js" 1`] = `
"// src/subdir/index.ts
var entryPoint = \\"src/subdir/index\\";
export {
  entryPoint
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > entries > input > resolves "./subdir/index.ts" entry to "src/subdir/index.ts" and bundles to "lib/subdir/index.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../../src/subdir/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/subdir/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "file" entry to "src/file.ts" and bundles to "lib/file.js" 1`] = `
"// src/file.ts
var entryPoint = \\"src/file\\";
export {
  entryPoint
};
//# sourceMappingURL=file.js.map
"
`;

exports[`node > entries > input > resolves "file" entry to "src/file.ts" and bundles to "lib/file.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/file.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/file';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "file.ts" entry to "src/file.ts" and bundles to "lib/file.js" 1`] = `
"// src/file.ts
var entryPoint = \\"src/file\\";
export {
  entryPoint
};
//# sourceMappingURL=file.js.map
"
`;

exports[`node > entries > input > resolves "file.ts" entry to "src/file.ts" and bundles to "lib/file.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/file.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/file';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "file-or-subdir" entry to "src/file-or-subdir.ts" and bundles to "lib/file-or-subdir.js" 1`] = `
"// src/file-or-subdir.ts
var entryPoint = \\"src/file-or-subdir\\";
export {
  entryPoint
};
//# sourceMappingURL=file-or-subdir.js.map
"
`;

exports[`node > entries > input > resolves "file-or-subdir" entry to "src/file-or-subdir.ts" and bundles to "lib/file-or-subdir.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/file-or-subdir.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/file-or-subdir';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "file-or-subdir.ts" entry to "src/file-or-subdir.ts" and bundles to "lib/file-or-subdir.js" 1`] = `
"// src/file-or-subdir.ts
var entryPoint = \\"src/file-or-subdir\\";
export {
  entryPoint
};
//# sourceMappingURL=file-or-subdir.js.map
"
`;

exports[`node > entries > input > resolves "file-or-subdir.ts" entry to "src/file-or-subdir.ts" and bundles to "lib/file-or-subdir.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/file-or-subdir.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/file-or-subdir';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "file-or-subdir/index" entry to "src/file-or-subdir/index.ts" and bundles to "lib/file-or-subdir/index.js" 1`] = `
"// src/file-or-subdir/index.ts
var entryPoint = \\"src/file-or-subdir/index\\";
export {
  entryPoint
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > entries > input > resolves "file-or-subdir/index" entry to "src/file-or-subdir/index.ts" and bundles to "lib/file-or-subdir/index.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../../src/file-or-subdir/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/file-or-subdir/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "file-or-subdir/index.ts" entry to "src/file-or-subdir/index.ts" and bundles to "lib/file-or-subdir/index.js" 1`] = `
"// src/file-or-subdir/index.ts
var entryPoint = \\"src/file-or-subdir/index\\";
export {
  entryPoint
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > entries > input > resolves "file-or-subdir/index.ts" entry to "src/file-or-subdir/index.ts" and bundles to "lib/file-or-subdir/index.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../../src/file-or-subdir/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/file-or-subdir/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "index" entry to "src/index.ts" and bundles to "lib/index.js" 1`] = `
"// src/index.ts
var entryPoint = \\"src/index\\";
export {
  entryPoint
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > entries > input > resolves "index" entry to "src/index.ts" and bundles to "lib/index.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "index.ts" entry to "src/index.ts" and bundles to "lib/index.js" 1`] = `
"// src/index.ts
var entryPoint = \\"src/index\\";
export {
  entryPoint
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > entries > input > resolves "index.ts" entry to "src/index.ts" and bundles to "lib/index.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "subdir" entry to "src/subdir/index.ts" and bundles to "lib/subdir.js" 1`] = `
"// src/subdir/index.ts
var entryPoint = \\"src/subdir/index\\";
export {
  entryPoint
};
//# sourceMappingURL=subdir.js.map
"
`;

exports[`node > entries > input > resolves "subdir" entry to "src/subdir/index.ts" and bundles to "lib/subdir.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/subdir/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/subdir/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > input > resolves "subdir/index.ts" entry to "src/subdir/index.ts" and bundles to "lib/subdir/index.js" 1`] = `
"// src/subdir/index.ts
var entryPoint = \\"src/subdir/index\\";
export {
  entryPoint
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > entries > input > resolves "subdir/index.ts" entry to "src/subdir/index.ts" and bundles to "lib/subdir/index.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../../src/subdir/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/subdir/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > multiple entries > allows to handle multiple entries 1`] = `
"// src/submoduleA/index.ts
var entryPoint = \\"submoduleA\\";
export {
  entryPoint
};
//# sourceMappingURL=submoduleA.js.map
"
`;

exports[`node > entries > multiple entries > allows to handle multiple entries 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/submoduleA/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'submoduleA';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > multiple entries > allows to handle multiple entries 3`] = `
"// src/submoduleB/index.ts
var entryPoint = \\"submoduleB\\";
export {
  entryPoint
};
//# sourceMappingURL=submoduleB.js.map
"
`;

exports[`node > entries > multiple entries > allows to handle multiple entries 4`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/submoduleB/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'submoduleB';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > multiple entries > use splitting to share code between multiple entries 1`] = `
"import {
  wrap
} from \\"./shared/EB35NJ2I.js\\";

// src/submoduleA/index.ts
var entryPoint = wrap(\\"submoduleA\\");
export {
  entryPoint
};
//# sourceMappingURL=submoduleA.js.map
"
`;

exports[`node > entries > multiple entries > use splitting to share code between multiple entries 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/submoduleA/index.ts\\"],
  \\"sourcesContent\\": [\\"import { wrap } from '../utils';\\\\n\\\\nexport const entryPoint = wrap('submoduleA');\\\\n\\"],
  \\"mappings\\": \\";;;;;AAEO,IAAM,aAAa,KAAK,YAAY;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > multiple entries > use splitting to share code between multiple entries 3`] = `
"import {
  wrap
} from \\"./shared/EB35NJ2I.js\\";

// src/submoduleB/index.ts
var entryPoint = wrap(\\"submoduleB\\");
export {
  entryPoint
};
//# sourceMappingURL=submoduleB.js.map
"
`;

exports[`node > entries > multiple entries > use splitting to share code between multiple entries 4`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/submoduleB/index.ts\\"],
  \\"sourcesContent\\": [\\"import { wrap } from '../utils';\\\\n\\\\nexport const entryPoint = wrap('submoduleB');\\\\n\\"],
  \\"mappings\\": \\";;;;;AAEO,IAAM,aAAa,KAAK,YAAY;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > multiple entries > use splitting to share code between multiple entries 5`] = `
"// src/utils.ts
function wrap(name) {
  return \`wrapped(\${name})\`;
}

export {
  wrap
};
//# sourceMappingURL=EB35NJ2I.js.map
"
`;

exports[`node > entries > multiple entries > use splitting to share code between multiple entries 6`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../../src/utils.ts\\"],
  \\"sourcesContent\\": [\\"export function wrap(name: string) {\\\\n  return \`wrapped(\${name})\`;\\\\n}\\\\n\\"],
  \\"mappings\\": \\";AAAO,SAAS,KAAK,MAAc;AACjC,SAAO,WAAW,IAAI;AACxB;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > output > resolves "index:bundles/main to "src/index.ts" and bundles to "lib/bundles/main.js" 1`] = `
"// src/index.ts
var entryPoint = \\"src/index\\";
export {
  entryPoint
};
//# sourceMappingURL=main.js.map
"
`;

exports[`node > entries > output > resolves "index:bundles/main to "src/index.ts" and bundles to "lib/bundles/main.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../../src/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > output > resolves "index:main to "src/index.ts" and bundles to "lib/main.js" 1`] = `
"// src/index.ts
var entryPoint = \\"src/index\\";
export {
  entryPoint
};
//# sourceMappingURL=main.js.map
"
`;

exports[`node > entries > output > resolves "index:main to "src/index.ts" and bundles to "lib/main.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > output > resolves "index:main.bundle to "src/index.ts" and bundles to "lib/main.bundle.js" 1`] = `
"// src/index.ts
var entryPoint = \\"src/index\\";
export {
  entryPoint
};
//# sourceMappingURL=main.bundle.js.map
"
`;

exports[`node > entries > output > resolves "index:main.bundle to "src/index.ts" and bundles to "lib/main.bundle.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > entries > output > resolves "index:main.js to "src/index.ts" and bundles to "lib/main.js" 1`] = `
"// src/index.ts
var entryPoint = \\"src/index\\";
export {
  entryPoint
};
//# sourceMappingURL=main.js.map
"
`;

exports[`node > entries > output > resolves "index:main.js to "src/index.ts" and bundles to "lib/main.js" 2`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/index.ts\\"],
  \\"sourcesContent\\": [\\"export const entryPoint = 'src/index';\\\\n\\"],
  \\"mappings\\": \\";AAAO,IAAM,aAAa;\\",
  \\"names\\": []
}
"
`;

exports[`node > minify > drops debugger in production mode 1`] = `
"// src/readJson.ts
import { readFile } from \\"node:fs/promises\\";
async function readJson(filePath) {
  const content = await readFile(filePath, \\"utf8\\");
  return JSON.parse(content);
}
export {
  readJson
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > production mode > don't minify code when production mode is off 1`] = `
"// src/readJson.ts
import { readFile } from \\"node:fs/promises\\";
import { parseJson } from \\"parse-json\\";
import { parseJsonDev } from \\"parse-json-dev\\";
import { parseJsonOptional } from \\"parse-json-optional\\";
import { parseJsonPeer } from \\"parse-json-peer\\";
async function readJson(filePath, use) {
  const content = await readFile(filePath, \\"utf8\\");
  switch (use) {
    case \\"dev\\":
      return parseJsonDev(content);
    case \\"optional\\":
      return parseJsonOptional(content);
    case \\"peer\\":
      return parseJsonPeer(content);
  }
  return parseJson(content);
}
export {
  readJson
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > production mode > minify code when production mode is on 1`] = `
"// src/readJson.ts
import { readFile } from \\"node:fs/promises\\";
import { parseJson } from \\"parse-json\\";
import { parseJsonDev } from \\"parse-json-dev\\";
import { parseJsonOptional } from \\"parse-json-optional\\";
import { parseJsonPeer } from \\"parse-json-peer\\";
async function readJson(filePath, use) {
  const content = await readFile(filePath, \\"utf8\\");
  switch (use) {
    case \\"dev\\":
      return parseJsonDev(content);
    case \\"optional\\":
      return parseJsonOptional(content);
    case \\"peer\\":
      return parseJsonPeer(content);
  }
  return parseJson(content);
}
export {
  readJson
};
//# sourceMappingURL=index.js.map
"
`;

exports[`node > source maps > generates source maps 1`] = `
"{
  \\"version\\": 3,
  \\"sources\\": [\\"../src/readJson.ts\\"],
  \\"sourcesContent\\": [\\"/// <reference path=\\\\\\"../types/vendor.d.ts\\\\\\" />\\\\nimport { readFile } from 'node:fs/promises';\\\\n\\\\nimport { parseJson } from 'parse-json';\\\\nimport { parseJsonDev } from 'parse-json-dev';\\\\nimport { parseJsonOptional } from 'parse-json-optional';\\\\nimport { parseJsonPeer } from 'parse-json-peer';\\\\n\\\\nexport async function readJson(\\\\n  filePath: string,\\\\n  use?: 'dev' | 'optional' | 'peer',\\\\n): Promise<unknown> {\\\\n  const content = await readFile(filePath, 'utf8');\\\\n\\\\n  switch (use) {\\\\n    case 'dev':\\\\n      return parseJsonDev(content);\\\\n    case 'optional':\\\\n      return parseJsonOptional(content);\\\\n    case 'peer':\\\\n      return parseJsonPeer(content);\\\\n  }\\\\n\\\\n  return parseJson(content);\\\\n}\\\\n\\"],
  \\"mappings\\": \\";AACA,SAAS,gBAAgB;AAEzB,SAAS,iBAAiB;AAC1B,SAAS,oBAAoB;AAC7B,SAAS,yBAAyB;AAClC,SAAS,qBAAqB;AAE9B,eAAsB,SACpB,UACA,KACkB;AAClB,QAAM,UAAU,MAAM,SAAS,UAAU,MAAM;AAE/C,UAAQ,KAAK;AAAA,IACX,KAAK;AACH,aAAO,aAAa,OAAO;AAAA,IAC7B,KAAK;AACH,aAAO,kBAAkB,OAAO;AAAA,IAClC,KAAK;AACH,aAAO,cAAc,OAAO;AAAA,EAChC;AAEA,SAAO,UAAU,OAAO;AAC1B;\\",
  \\"names\\": []
}
"
`;
